# event-discovery

./: README.md  pyproject.toml
src/event_discovery/: cli.py  db.py  mcp_server.py  ranker.py
src/event_discovery/collectors/: asianart.py  cityarts.py  funcheap.py  ical.py  luma.py  salesforce_park.py  sfballet.py  ticketmaster.py  tribe_events.py
