[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "event-discovery"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "openai>=1.68.0",
    "python-dateutil>=2.9",
    "rich>=13.0",
]

[project.scripts]
events = "event_discovery.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/event_discovery"]
